Fix group view css to make things more tidy and aligned (#684)
* Fix group view css to make things more tidy and aligned

* Unbreak completed section

--- a/frontend/src/components/GroupView/RightView/GroupTask.module.scss
+++ b/frontend/src/components/GroupView/RightView/GroupTask.module.scss
@@ -1,8 +1,11 @@
+@import '../groupview-sizes.scss';
+
 .GroupTask {
   font-size: 12px;
   color: white;
   margin-left: 14px;
-  min-height: 200px;
+  width: 260px;
+  min-height: $group-task-row-content-height;
 }
 
 .TaskQueueGroupTask {
