--- a/frontend/src/components/GroupView/RightView/GroupTaskRow.module.scss
+++ b/frontend/src/components/GroupView/RightView/GroupTaskRow.module.scss
@@ -1,3 +1,5 @@
+@import '../groupview-sizes.scss';
+
 .GroupTaskRow {
   display: flex;
   direction: row;
@@ -14,15 +16,15 @@
 }
 
 .AddTaskContainer {
-  width: 105px;
-  height: 121px;
+  width: 120px;
+  height: $group-task-row-content-height;
   border: 3px dashed rgba(255, 138, 138, 0.5);
   box-sizing: border-box;
   border-radius: 10px;
   display: flex;
   align-content: center;
   margin: auto;
-  margin-right: 26px;
+  margin-right: 8px;
   background-color: rgb(255, 255, 255);
 }
 
@@ -35,6 +37,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  padding: 1em;
   justify-content: center;
   align-items: center;
 }
